tests/macro_syntax/value_is_not_constant.rs
use const_init_macros::ConstInit;

#[derive(ConstInit)]
struct FooBar {
    #[const_init(value = true)]
    foo: bool,
    #[const_init(value = Default::default())]
    bar: usize,
}

fn main() {}
